# arafrappe

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
arabic_pro/: api.py  audit.py  boot.py  commands.py  hooks.py  modules.txt
arabic_pro/arabic_pro/doctype/arabic_pro_settings/: arabic_pro_settings.json  arabic_pro_settings.py
arabic_pro/config/: arabic_pro.py
arabic_pro/public/css/: arabic_pro_font.css
arabic_pro/public/js/: arabic_pro_font.js
arabic_pro/translations/: ar.csv
