[project]
name = "arabic_pro"
authors = [
    { name = "IdeaOrbit", email = "info@ideaorbit.net" }
]
description = "ترجمة عربية احترافية شاملة لـ Frappe و ERPNext"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"
